--- a/static/losslesscut/index.html
+++ b/static/losslesscut/index.html
@@ -214,13 +214,16 @@
       <p style="font-size: 85%; color: rgba(255,255,255,0.8)">
         I initially only released LosslessCut as a direct download from GitHub, as an unsigned/untrusted exe/binary file download. People were complaining that it's hard to download/install the unsigned exe file, as they need to go through these dialogs saying that this file is a threat to your computer, and anti-virus complaining about executables downloaded from the internet. Some wanted a way to automatically update the app when new versions are out. This can both be achieved by downloading through the MS and Apple App Store. Microsoft charges money for signing binaries and a yearly fee for publishing to the Microsoft Store. Therefore I decided I can sell it in the MS Store for those who want to support my continued work and want to have the benefits it gives, while at the same time providing more experimental unsigned downloads as usual. Of course anyone is also free to build LosslessCut from source code.
       </p>
+
+      <a style="text-decoration: none; color: rgba(255, 255, 255, 0.7); font-size: .9em; font-weight: bold;" href="https://mifi.no/losslesscut/faq">More FAQ...</a>
     </div>
 
     <div style="height: 200px">
       <div style="max-width: 100%; box-sizing: border-box; padding: 50px 30px; text-align: center;">
         <div>
-          <a style="text-decoration: none; color: white; margin: 0 5px" href="https://github.com/mifi/lossless-cut/blob/master/README.md">How to use</a>
-          <a style="text-decoration: none; color: white; margin: 0 5px" href="mailto:mikael@yankee.no">Help, support and contact</a>
+          <a style="text-decoration: none; color: white; margin: 0 5px" href="https://mifi.no/losslesscut/usage">How to use</a>
+          <a style="text-decoration: none; color: white; margin: 0 5px" href="https://mifi.no/losslesscut/troubleshooting">Troubleshooting</a>
+          <a style="text-decoration: none; color: white; margin: 0 5px" href="mailto:mikael@yankee.no">Contact me</a>
           <a style="text-decoration: none; color: white; margin: 0 5px" href="https://losslesscut.mifi.no/privacy-policy.html">Privacy policy</a>
           <a style="text-decoration: none; color: white; margin: 0 5px" href="https://github.com/mifi/lossless-cut">Source code</a>
           <a style="text-decoration: none; color: white; margin: 0 5px" href="https://mifi.no/">More apps by mifi ❤️</a>
