--- a/static/nomadbaker/index.html
+++ b/static/nomadbaker/index.html
@@ -53,5 +53,9 @@
       <img class="bake" src="https://static.mifi.no/nomadbaker/sea%20salt%20chocolate%20chip%20cookies.jpg-out.jpg" alt="" />
     </div>
   </div>
+
+  <div style="text-align: center;margin-top: 50px; margin-bottom: 50px;">
+    <a href="https://www.instagram.com/nomad.baker" style="text-align: center; color: white; text-decoration: none; font-size: 1.5em; font-weight: 200;">Instagram</a>
+  </div>
 </body>
 </html>
