fix broken badge

--- a/static/losslesscut/index.html
+++ b/static/losslesscut/index.html
@@ -201,7 +201,7 @@
         <div style="display: flex; flex-wrap: wrap; justify-content: center;">
           <a class="app-store" style="margin: 0 2px" href="https://apps.apple.com/app/id1505323402"><img src="https://github.com/mifi/lossless-cut/raw/master/mac-app-store-badge.svg?sanitize=true" alt="Mac App Store" height="50"/></a>
           <a class="app-store" style="border-radius: 13px; margin: 0 2px" href="https://www.microsoft.com/store/apps/9P30LSR4705L?cid=storebadge&ocid=badge"><img src="https://github.com/mifi/lossless-cut/raw/master/ms-store-badge.svg?sanitize=true" alt="MS badge" height="50"/></a>
-          <a class="app-store" style="border-radius: 13px; margin: 0 2px" href="https://snapcraft.io/losslesscut"><img src="https://snapcraft.io/static/images/badges/en/snap-store-black.svg" alt="Snapcraft" height="50"/></a>
+          <a class="app-store" style="border-radius: 13px; margin: 0 2px" href="https://snapcraft.io/losslesscut"><img src="https://github.com/mifi/lossless-cut/raw/master/snap-store-black.svg?sanitize=true" alt="Snapcraft" height="50"/></a>
         </div>
       </div>
     </div>
