--- a/static/ukraine/index.html
+++ b/static/ukraine/index.html
@@ -47,7 +47,7 @@
   <p>Q: STFU about Ukraine and write your software.</p>
   <p>A: I give away this software for free, and I can support whoever I want to. Feel free to stop using my software or take the source code and change it how you like.</p>
   <p>Q: Do you hate Russian people?</p>
-  <p>A: I don't. I sympathise with the Russians soldiers who have been sent into a war they do not even know the purpose of. I don't blame the Russian people who don't stand up against their government because they are afraid of being beaten up and sent to jail for protesting.</p>
+  <p>A: I don't. I have many Russian friends. I sympathise with the Russians soldiers who have been sent into a war they do not even know the purpose of. I don't blame the Russian people who don't stand up against their government because they are afraid of being beaten up and sent to jail for protesting.</p>
   <p>Q: Why are you doing this?</p>
   <p>A: I believe parts of the world is so full of misinformation around this conflict, and there is a lot of censorship and various media and information channels being blocked around the world. If I can make <i>just a little</i> change, then it's worth it.</p>
   <p>Q: Are you blocking LosslessCut in Russia or X country?</p>
