--- a/static/palestine/index.html
+++ b/static/palestine/index.html
@@ -77,14 +77,33 @@
 
     container.addEventListener('mousemove', handleMove);
     container.addEventListener('touchmove', handleMove);
+
+    let message = (() => {
+      try {
+        const { timeZone } = Intl.DateTimeFormat().resolvedOptions();
+
+        if (timeZone.startsWith('America/')) return 'Tell Congress to end U.S. funding of Israel\'s genocide in Gaza.';
+        if (timeZone === 'Europe/London') return 'Urge your MP to start sanctioning Israel and stop military aid.';
+      } catch (err) {
+        console.error(err);
+      }
+      return 'Urge your politicians to start sanctioning Israel and stop military aid.'
+    })();
+
+    document.querySelector('.info2 .message').innerText = message;
   });
 
 </script>
 
 <div id="container"></div>
 
-<div class="info">
-  Names of some of the children that have been killed in the Gaza genocide since <span style="white-space: nowrap">October 7, 2023.</span>
+<div class="info1">
+  Names of some of the children that have been killed in the Gaza <span style="font-weight: bold">genocide</span> since <span style="white-space: nowrap; font-weight: bold;">October 7, 2023.</span>
+</div>
+
+<div class="info2">
+  <div class="message"></div>
+  <div class="message2" style="margin-top: 1em; color: rgba(255, 255, 255, 0.5)">Your silence supports the killing.</div>
 </div>
 
 <div class="overlay">
