--- a/static/palestine/index.html
+++ b/static/palestine/index.html
@@ -117,7 +117,7 @@
 </div>
 
 <div class="footer">
-  Source: <a href="https://interactive.aljazeera.com/aje/2024/israel-war-on-gaza-10000-children-killed/" target="_blank" style="color: white">Al Jazeera</a>, <a href="https://en.wikipedia.org/wiki/Gaza_genocide" target="_blank" style="color: white">Wikipedia</a>
+  Source: <a href="https://interactive.aljazeera.com/aje/2024/israel-war-on-gaza-10000-children-killed/" target="_blank" style="color: white">Al Jazeera</a>, <a href="https://en.wikipedia.org/wiki/Gaza_genocide" target="_blank" style="color: white">Wikipedia</a>&nbsp;&nbsp;<a href="https://mifi.no/" target="_blank" style="color: rgba(255,255,255,0.9)">mifi.no</a>
 </div>
 
 </body>
