--- a/static/palestine/index.html
+++ b/static/palestine/index.html
@@ -107,7 +107,7 @@
 <div class="info2">
   <div>There is still hope.</div>
   <div class="message"></div>
-  <div class="message2" style="margin-top: 1em; color: rgba(255, 255, 255, 0.5)">Your silence supports the killing.</div>
+  <div class="message2" style="margin-top: 1em; color: rgba(255, 255, 255, 0.5)">When we don’t speak, those in power assume we agree.</div>
 </div>
 
 <div class="overlay">
