--- a/static/palestine/index.html
+++ b/static/palestine/index.html
@@ -105,7 +105,7 @@
 </div>
 
 <div class="info2">
-  <div>There is still hope.</div>
+  <div>There is still hope. Protest, take action.</div>
   <div class="message"></div>
   <div class="message2" style="margin-top: 1em; color: rgba(255, 255, 255, 0.5)">When we don’t speak, those in power assume we agree.</div>
 </div>
