--- a/static/palestine/index.html
+++ b/static/palestine/index.html
@@ -105,9 +105,13 @@
 </div>
 
 <div class="info2">
-  <div>There is still hope. Protest, take action.</div>
+  <div>There is still hope. Protest, <span style="font-weight: bold">take action.</span></div>
   <div class="message"></div>
   <div class="message2" style="margin-top: 1em; color: rgba(255, 255, 255, 0.5)">When we don’t speak, those in power assume we agree.</div>
+</div>
+
+<div class="info3">
+  <a style="color: inherit" href="https://humantiproject.org/email-template/gaza-city-is-being-erased/">E-mail template</a>
 </div>
 
 <div class="overlay">
@@ -117,7 +121,7 @@
 </div>
 
 <div class="footer">
-  Source: <a href="https://interactive.aljazeera.com/aje/2024/israel-war-on-gaza-10000-children-killed/" target="_blank" style="color: white">Al Jazeera</a>, <a href="https://en.wikipedia.org/wiki/Gaza_genocide" target="_blank" style="color: white">Wikipedia</a>&nbsp;&nbsp;<a href="https://mifi.no/" target="_blank" style="color: rgba(255,255,255,0.9)">mifi.no</a>
+  Source: <a href="https://interactive.aljazeera.com/aje/2024/israel-war-on-gaza-10000-children-killed/" target="_blank" style="color: white">Al Jazeera</a>, <a href="https://en.wikipedia.org/wiki/Gaza_genocide" target="_blank" style="color: white">Wikipedia</a>&nbsp;|&nbsp;<a href="https://mifi.no/" target="_blank" style="color: rgba(255,255,255,0.9)">mifi.no</a>
 </div>
 
 </body>
