--- a/static/losslesscut/index.html
+++ b/static/losslesscut/index.html
@@ -223,7 +223,7 @@
         <div>
           <a style="text-decoration: none; color: white; margin: 0 5px" href="https://mifi.no/losslesscut/usage">How to use</a>
           <a style="text-decoration: none; color: white; margin: 0 5px" href="https://mifi.no/losslesscut/troubleshooting">Troubleshooting</a>
-          <a style="text-decoration: none; color: white; margin: 0 5px" href="mailto:mikael@yankee.no">Contact me</a>
+          <a style="text-decoration: none; color: white; margin: 0 5px" href="mailto:losslesscut@mifi.no">Contact me</a>
           <a style="text-decoration: none; color: white; margin: 0 5px" href="https://losslesscut.mifi.no/privacy-policy.html">Privacy policy</a>
           <a style="text-decoration: none; color: white; margin: 0 5px" href="https://github.com/mifi/lossless-cut">Source code</a>
           <a style="text-decoration: none; color: white; margin: 0 5px" href="https://mifi.no/">More apps by mifi ❤️</a>
