--- a/static/ukraine/index.html
+++ b/static/ukraine/index.html
@@ -45,7 +45,7 @@
   <p>Q: Why do you support USA invasions in Iraq, Afghanistan or (insert X country here) and not Russia's invasion into Ukraine? You're a hypocrite!!</p>
   <p>A: I never said I supported any of these invasions. As a matter of fact I did not support any of those wars, and I do not support the Russian invasion into Ukraine.</p>
   <p>Q: STFU about Ukraine and write your software.</p>
-  <p>A: I give away this software for free, and I can support whoever I want to. Feel free to stop using my software or take the source code and change it how you like.</p>
+  <p>A: I give away this software for free, and I can support whoever I want to. Feel free to stop using my software or take the source code and change it how you like it to be.</p>
   <p>Q: Do you hate Russian people?</p>
   <p>A: I don't. I have many Russian friends. I sympathise with the Russians soldiers who have been sent into a war they do not even know the purpose of. I don't blame the Russian people who don't stand up against their government because they are afraid of being beaten up and sent to jail for protesting.</p>
   <p>Q: Why are you doing this?</p>
